# ds-hw-2

./: DS_HW2.1.ipynb  DS_HW2.1_.ipynb  DS_HW2.2.ipynb  DS_HW2.3.ipynb  pyproject.toml  salary.csv
.ipynb_checkpoints/: DS_HW2.1-checkpoint.ipynb
